fixed a bug from my last commit where the noficiation menu animation was stopping before the final keyframe and still overlapping the course list.

--- a/public/stylesheets/rqra/header.css
+++ b/public/stylesheets/rqra/header.css
@@ -80,7 +80,11 @@ div#newNotificationCount {
 		top: -200px;
 		opacity: 0; 
 	}
-	1% {
+	5% { 
+		top: -200px;
+		opacity: 0; 
+	}
+	6% {
 		top: 50px;
 		opacity: 0;
 	}
